[tool.poetry]
name = "vaccgui"
version = "0.1.0"
description = ""
authors = ["Jason Lobell <jasonlobell123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"
slacc = "^1.0.1"
paramiko = "^3.4.1"
langchain = "^0.2.15"
bs4 = "^0.0.2"
langchain-community = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-chroma = "^0.1.3"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
